# LogicWaySolution

./: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.ghcr.yaml  docker-compose.prod.yaml  http-client.env.json  pyproject.toml
.github/workflows/: docker-image-frontend.yml  docker-image-logicway-service.yml  docker-image-route-engine-service.yml
frontend/: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  package-lock.json  package.json
frontend/public/: env.js  env.js.template  index.html  manifest.json
helm/: values-monitoring.yaml
k8s/: README.md  configmap.yaml  frontend-deployment.yaml  ingress.yaml  job-load-data.yaml  logicway-deployment.yaml  logicway-service.yaml  postgres-deployment.yaml  postgres-service.yaml  route-engine-deployment.yaml  route-engine-service.yaml
k8s/base/: configmap.yaml  secret.yaml
logicway/: Dockerfile  README.md  db.sqlite3  manage.py
logicway/database/: README.md  database.py  fetch_data_and_convert_to_json.py  load_data.py  models.py  stops_data.json  upload_data.py  urls.py  views.py
logicway/frontend/: README.md  package-lock.json  package.json
logicway/logicway/: settings.py  urls.py  wsgi.py
logicway/map/: api_manual_testing.http  urls.py  views.py
logicway/migrations/: env.py
logicway/routing/: simple_greedy_search.py  tests.http  typedef.py  urls.py  views.py
logicway/scraper/: scraper.py
myproject/: alembic.ini  db_keys
myproject/alembic/: env.py
myproject/database/: load_data.py  models.py
myproject/map/: views.py
route_engine/: Dockerfile  README.md  manage.py
(+101 files in other folders)
