[tool.poetry]
name = "logicway"
version = "0.1.0"
description = "An app for searching best way to your destination point"
authors = ["LogicWayTeam <nikolajvojna53@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2"
selenium = "^4.31.0"
webdriver-manager = "^4.0.2"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.40"
psycopg2 = "^2.9.10"
alembic = "^1.15.2"
pandas = "^2.2.3"
tqdm = "^4.67.1"
flask = "^3.1.0"
pytest-django = "^4.11.1"
gitpython = "^3.1.44"
django-cors-headers = "^4.7.0"
routingpy = "^1.3.0"
geopy = "^2.4.1"
networkx = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
