[tool.poetry]
name = "logicway"
version = "0.1.0"
description = "An app for searching best way to your destination point"
authors = ["LogicWayTeam <nikolajvojna53@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2"
whitenoise = "^6.9.0"
pytest-django = "^4.11.1"

[tool.poetry.group.logicway.dependencies]
sqlalchemy = "^2.0.40"
selenium = "^4.31.0"
webdriver-manager = "^4.0.2"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
alembic = "^1.15.2"
pandas = "^2.2.3"
tqdm = "^4.67.1"
flask = "^3.1.0"
gitpython = "^3.1.44"
django-cors-headers = "^4.7.0"
networkx = "^3.4.2"

[tool.poetry.group.route_engine.dependencies]
routingpy = "^1.3.0"
geopy = "^2.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
